--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,10 +8,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <%= link_to "Home", home_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <%= link_to "About", about_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="post.html">Sample Post</a>
