--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,1 +1,34 @@
-<h1>Contact us</h1>
+<h1><%= t('contacts.contact_us') %></h1>
+
+<%= form_for :contact, url: contacts_path do |f| %>
+
+	<% if @contact && @contact.errors.any? %>
+		<p>
+			<ul>
+				<% @contact.errors.full_messages.each do |msg| %>
+				<li><%= msg %></li>
+				<% end %>
+			</ul>	
+		</p>
+	<% end %>
+
+	<p>
+		<%= f.label :name %><br/>
+		<%= f.text_field :name %>
+	</p>
+	
+	<p>
+		<%= f.label :email %><br/>
+		<%= f.text_field :email %>
+	</p>
+
+	<p>
+		<%= f.label :message %><br/>
+		<%= f.text_area :message %>
+	</p>
+
+	<p>
+	<%= f.submit 'Send Message' %> 
+	</p>
+
+<% end %>
