--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,7 +17,7 @@
             <a class="nav-link" href="post.html">Sample Post</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <%= link_to "Contact", new_contacts_path, class: "nav-link" %>
           </li>
         </ul>
       </div>
