--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -15,7 +15,7 @@
             <%= link_to "About", about_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Sample Post</a>
+            <%= link_to "Articles", articles_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Contact", new_contacts_path, class: "nav-link" %>
