--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -418,3 +418,13 @@ footer .copyright {
   font-size: 16px;
   padding: 25px 35px;
 }
+
+.btn-sm {
+  font-size: 10px;
+  font-weight: 600;
+  padding: 10px 20px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  border-radius: 0;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
