--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,30 +1,53 @@
-<%= form_with model: @article, local: true do |form| %>
-
+<article>
+   	<div class="container">
+   	<%= form_with model: @article, local: true do |form| %>
 	<% if @article.errors.any? %>
 		<div id="error_explanation">
-			<h2>
-				<%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:
-			</h2>
-			<ul>
-				<% @article.errors.full_messages.each do |msg| %>
-					<li><%= msg %></li>
-				<% end %>
-			</ul>
-		</div>
+		<h2>
+			<%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:
+		</h2>
+		<ul>
+			<% @article.errors.full_messages.each do |msg| %>
+				<li><%= msg %></li>
+			<% end %>
+		</ul>
+	</div>
 	<% end %>
 
-	<p>
-		<%= form.label :title %><br>
-		<%= form.text_field :title %> 
-	</p>
-
-	<p>
-		<%= form.label :text %><br>
-		<%= form.text_area :text %>
-	</p>
-
-	<p>
-		<%= form.submit %>
-	</p>
-
+    <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+        	<form name="sentMessage" id="contactForm" novalidate>
+          		<div class="control-group">
+            		<div class="form-group floating-label-form-group controls">
+						<label>Title</label>
+						<%= form.text_field :title, class: "form-control", placeholder: "Title", id: "name" %> 
+				<p class="help-block text-danger"></p>
+            </div>
+          </div>
+          <div class="control-group">
+            <div class="form-group floating-label-form-group controls">
+			<label>Subtitle</label>
+				<%= form.text_field :subtitle,  class: "form-control", placeholder: "Subtitle", id: "name" %>
+				<p class="help-block text-danger"></p>
+            </div>
+          </div> 
+          <div class="control-group">
+            <div class="form-group floating-label-form-group controls">
+			<label>Text</label>
+			 </div>								  
+				<%= form.rich_text_area :text, placeholder: "Go write new article...", class: "trix-content" %>
+			<p class="help-block text-danger"></p>
+           
+          </div>
+          <br>
+          <div id="success"></div>
+          <div class="form-group">							  
+				<%= form.submit 'Create Article', class: "btn btn-success", id: "sendMessageButton" %>
+			</div>
+	        </form>
+	      </div>
+	    </div>
+	  </div>
+	 </article>							  
 <% end %>
+
