--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,13 +1,17 @@
-<p>
-	<strong>Commenter:</strong>
-	<%= comment.commenter %>
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+			<div class="control-group">
+					<b><u><%= comment.commenter %></u></b>
+          </div>
+          <div class="control-group">
+					<i><%= comment.body %></i>
+				<p class="help-block text-danger"></p>
+          </div>
 
-<p>
-	<strong>Comment:</strong>
-	<%= comment.body %>
-</p>
-
-<p>
-	<%= link_to 'Destroy Comment', [comment.article, comment], method: :delete, data: { confirm: 'Are you sure?' } %>
-</p>
+		<p>
+			<%= link_to 'Destroy', [comment.article, comment], class: "btn btn-secondary btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %>
+		</p>
+		</div>
+	</div>
+</div>
