--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -5,7 +5,7 @@
 </p>
 <p>
 	<%= form.label :body %><br>
-	<%= form.text_area :body %>
+	<%= form.text_area :body, placeholder: "Go write new comment..." %>
 </p>
 <p>
 	<%= form.submit %>
