--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,7 +1,7 @@
 <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Anto Monti Official</a>
+      <%= link_to "Anto Monti Official", "http://antomonti.com/", class: "navbar-brand" %>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -9,7 +9,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <%= link_to "Home", home_path, class: "nav-link" %>
+            <%= link_to "Create Article", new_article_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "About", about_path, class: "nav-link" %>
@@ -42,14 +42,7 @@
 <%= form_for :contact, url: contacts_path do |f| %>
 <!-- Main Content -->
   <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-        <form name="sentMessage" id="contactForm" novalidate>
-          <div class="control-group">
-            <div class="form-group floating-label-form-group controls">
-
-            <% if @contact && @contact.errors.any? %>
+     <% if @contact && @contact.errors.any? %>
               <p>
                 <ul>
                   <% @contact.errors.full_messages.each do |msg| %>
@@ -58,6 +51,12 @@
                 </ul> 
               </p>
             <% end %>
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+        <form name="sentMessage" id="contactForm" novalidate>
+          <div class="control-group">
+            <div class="form-group floating-label-form-group controls">
 
               <label>Name</label>
               <%= f.text_field :name, class: "form-control", placeholder: "Name", id: "name" %>
