--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Anto Monti Official</a>
+      <%= link_to "Anto Monti Official", "http://antomonti.com/", class: "navbar-brand" %>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -9,7 +9,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <%= link_to "Home", home_path, class: "nav-link" %>
+            <%= link_to "Create Article", new_article_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "About", about_path, class: "nav-link" %>
