adding time.now

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -34,6 +34,7 @@
           <div class="site-heading">
             <h1>Blog by Monti</h1>
             <span class="subheading">A Blog Theme by Anto Monti lifestyle</span>
+            <%= Time.now.strftime("%b %d, %Y") %>
           </div>
         </div>
       </div>
