add rendering for footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+      <!-- Footer -->
+      <%= render 'layouts/footer' %>
+      
       <%= yield %>
   </body>
 </html>
