editing syntax error

--- a/app/views/contacts/create.html.erb
+++ b/app/views/contacts/create.html.erb
@@ -31,7 +31,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>Thanks the message!</h1>
+            <h1>Thanks for the message!</h1>
             <span class="subheading">Wait for the response. It`s will be shortly</span>
           </div>
         </div>
