rendering through partial _header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
   </head>
 
   <body>
-      
+      <!-- Header -->
+      <%= render 'layouts/header' %>
       <%= yield %>
       <!-- Footer -->
       <%= render 'layouts/footer' %>
