--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -47,12 +47,12 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <div class="post-preview">
-          <a href="post.html">
+          <a href="<%= article_path(article) %>">
             <h2 class="post-title">
-              <%= link_to article.title, article_path(article) %>
+              <%= article.title %>
             </h2>
             <h3 class="post-subtitle">
-              <%= link_to article.subtitle, article_path(article) %>
+              <%= article.subtitle %>
             </h3>
           </a>
           <p class="post-meta">Posted by
